# N64XR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
assets/fonts/: README.md
assets/models/: README.md
assets/shaders/: blur.frag  brightpass.frag  cartridge.frag  cartridge.vert  composite.frag  fullscreen.vert  upsample.frag
cmake/: FindOpenXR.cmake  FindSteamAudio.cmake
docs/: plan.md
src/common/: CMakeLists.txt
src/frontend/: CMakeLists.txt
src/frontend/include/: AliveIdle.h  AppState.h  ArtCache.h  BottomNav.h  Carousel.h  Cartridge.h  GlassPanel.h  HoloMath.h  HoloStage.h  Icons.h  MainWindow.h  Screens.h  SettingsStore.h  Theme.h  UiHost.h
src/frontend/src/: AliveIdle.cpp  ArtCache.cpp  BottomNav.cpp  Carousel.cpp  Cartridge.cpp  GlassPanel.cpp  HoloStage.cpp  HomeScreen.cpp  Icons.cpp  MainWindow.cpp  MeshGLB.cpp  RomBrowserScreen.cpp  SettingsScreen.cpp  SettingsStore.cpp  Theme.cpp  UiHost.cpp  main.cpp
src/plugins/gfx-vr/: CMakeLists.txt
src/plugins/gfx-vr/src/: Plugin.cpp
src/vr-scene/: CMakeLists.txt
src/vr-scene/include/: XrSession.h
src/vr-scene/src/: XrSession.cpp
third_party_licenses/: README.md
